# QDBus-Example

./: .gitignore  CMakeLists.txt  README.md  common.h.in
client/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
daemon/: CMakeLists.txt  Daemon.cpp  Daemon.hpp  Daemon_automoc.cpp  Makefile  cmake_install.cmake  main.cpp
daemon/Daemon_automoc.dir/: moc_Daemon_A43SBVTPQQ7Y3U.cpp
gclient/: CMakeLists.txt  Makefile  cmake_install.cmake  main.c
